--- a/swrcfit/model-ja.html
+++ b/swrcfit/model-ja.html
@@ -61,11 +61,11 @@ k はサブ関数の数、w<sub>i</sub> は重み係数で 0&lt;w<sub>i</sub>&lt
 と定義されている。この中で、次の関数が SWRC Fit に実装されている。</p>
 <table border="1"><tr><td>モデル<td>式<td>パラメータ</tr>
 <tr><td>dual-BC-CH<td>\(S_e = \begin{cases}w_1 \left(h / h_b\right)^{-\lambda_1} + (1-w_1)\left(h / h_b\right)^{-\lambda_2}  & (h>h_b)\\ 1 & (h \le h_b)\end{cases}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, h<sub>b</sub>, &lambda;<sub>1</sub>, &lambda;<sub>2</sub></tr><tr><td>VG<sub>1</sub>BC<sub>2</sub>-CH<td>\(\begin{eqnarray}S_e &=& \begin{cases}w_1 S_1 + (1-w_1)\left(h/H\right)^{-\lambda}  & (h>H)\\ w_1 S_1 + 1-w_1 & (h \le H)\end{cases}\\S_1 &=& \bigl[1+(h/H)^n\bigr]^{-m} ~~ (m=1-1/n)\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, H, n, &lambda;</tr><tr><td>dual-VG-CH<td>\(\begin{eqnarray}S_e &=& w_1\bigl[1+(\alpha h)^{n_1}\bigr]^{-m_1} + (1-w_1)\bigl[1+(\alpha h)^{n_2}\bigr]^{-m_2}\\m_i&=&1-1/{n_i}\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, &alpha;, n<sub>1</sub>, n<sub>2</sub></tr></table>
-<p>サンプルデータ sand (UNSODA 4440) のSWRCを示す。上記のCHモデルと、比較のためにVGモデルを示している。CHモーダルモデルではθ<sub>r</sub> = 0 と固定し、VGモデルではすべてのパラメータを自由変数としている。VGモデルではθ<sub>r</sub>=0.074と最適化された。</p>
+<p>サンプルデータ sand (UNSODA 4440) のSWRCを示す。上記のCHモデルと、比較のためにVGモデルを示している。CHモデルではθ<sub>r</sub> = 0 と固定し、VGモデルではすべてのパラメータを自由変数としている。VGモデルではθ<sub>r</sub>=0.074と最適化された。</p>
 
 <div align="center"><img src="img/dual-ch.png" alt="dual-CH models"></div>
 
-<p><a href="https://acsess.onlinelibrary.wiley.com/doi/10.1002/vzj2.20168#vzj220168-fig-0002">Seki et al. (2021) の Figure 2</a> には、浜岡砂丘砂のCHモーダルモデルによるSWRCと透水性曲線が示されている。同じ図は関ら (2021) にも示されている。</p>
+<p><a href="https://acsess.onlinelibrary.wiley.com/doi/10.1002/vzj2.20168#vzj220168-fig-0002">Seki et al. (2021) の Figure 2</a> には、浜岡砂丘砂のCHモデルによるSWRCと透水性曲線が示されている。同じ図は関ら (2021) にも示されている。</p>
 
 <h2>透水性関数</h2>
 
