--- a/swrcfit/unit.html
+++ b/swrcfit/unit.html
@@ -58,7 +58,7 @@ Units of other parameters used in SWRC Fit are dimensionless; &lambda; in BC mod
 </p>
 
 <hr>
-<p>Persistent URL of this page is <a href="http://purl.org/net/swrc/model.html">http://purl.org/net/swrc/model.html</a>.
+<p>Persistent URL of this page is <a href="http://purl.org/net/swrc/unit.html">http://purl.org/net/swrc/unit.html</a>.
 </p>
 <p>
 Author: <a href="http://www2.toyo.ac.jp/~seki_k/en/">Katsutoshi Seki</a>
