--- a/swrcfit/unit.html
+++ b/swrcfit/unit.html
@@ -12,7 +12,7 @@
 
 <h1>Unit in SWRC Fit</h1>
 
-<p>In <a href="./">SWRC Fit</a>, any unit can be used as the input data, and the unit of the calculated data depends on the unit used as the input data.</p>
+<p>In <a href="./">SWRC Fit</a>, any unit can be used as the input data, and the unit of the calculated parameters depend on the unit of the input data.</p>
 
 <h2>Unit of h</h2>
 
