conversion of unit

--- a/swrcfit/unit.html
+++ b/swrcfit/unit.html
@@ -12,15 +12,15 @@
 
 <h1>Unit in SWRC Fit</h1>
 
-<p>In <a href="./">SWRC Fit</a>, any unit can be used as the input data, and the unit of the calculated parameters depend on the unit of the input data.</p>
+<p>In <a href="./">SWRC Fit</a>, <strong>any unit</strong> can be used as the input data, and the unit of the calculated parameters depend on the unit of the input data.</p>
 
 <h2>Unit of h</h2>
 
-<p>Unit of pressure head (matric head, matric suction) is cm H<sub>2</sub>O in the sample data of UNSODA. Other unit such as kPa for matric potential can also be used for h.</p>
+<p>Unit of pressure head (matric head, matric suction) is cm H<sub>2</sub>O in the sample data of UNSODA. Other unit such as kPa for matric potential can also be used for h. Conversion of matric potential &psi; in kPa to matric head h in cm H<sub>2</sub>O: Let &rho;<sub>w</sub> (density of water) = 10<sup>3</sup> kg m<sup>-3</sup> and g = 9.8 m s<sup>-2</sup>. Then as 10<sup>3</sup>&psi; = 10<sup>-2</sup>hg&rho;<sub>w</sub> = 98h, &psi; = 0.098 h.</p>
 
-<p>Following paramters has the unit as same as h; h<sub>b</sub> in BC model, h<sub>m</sub> in KO model, a in FX model, and corresponding parameters in bimodal models, hb<sub>1</sub>, hb<sub>2</sub>, hm<sub>1</sub>, hm<sub>2</sub>, and H. If h is in cm, unit of these parameters are also in cm.</p>
+<p>Following parameters has the unit as same as h; h<sub>b</sub> in BC model, h<sub>m</sub> in KO model, a in FX model, and corresponding parameters in bimodal models, hb<sub>1</sub>, hb<sub>2</sub>, hm<sub>1</sub>, hm<sub>2</sub>, and H. If h is in cm, unit of these parameters are also in cm.</p>
 
-<p>&alpha; in VG model has the unit inverse to h. If h is in cm, unit of &alpha; is 1/cm or cm<sup>-1</sup>. Same to corresponding parameterse in bimodal models, &alpha;<sub>1</sub> and &alpha;<sub>2</sub>.
+<p>&alpha; in VG model has the unit inverse to h. If h is in cm, unit of &alpha; is 1/cm or cm<sup>-1</sup>. Same to corresponding parameters in bimodal models, &alpha;<sub>1</sub> and &alpha;<sub>2</sub>.
 
 <h2>Unit of &theta;</h2>
 
