--- a/swrcfit/model-ja.html
+++ b/swrcfit/model-ja.html
@@ -48,6 +48,8 @@ k はサブ関数の数、w<sub>i</sub> は重み係数で 0&lt;w<sub>i</sub>&lt
 <table border="1"><tr><td>モデル<td>式<td>パラメータ</tr>
 <tr><td>dual-BC<td>\(S_e = \begin{cases}w_1 \left(h / h_{b_1}\right)^{-\lambda_1} + (1-w_1)\left(h / h_{b_2}\right)^{-\lambda_2}  & (h>h_{b_2}) \\ w_1 \left(h / h_{b_1}\right)^{-\lambda_1} + 1-w_1  & (h_{b_1} < h \le h_{b_2}) \\1 & (h \le h_{b_1})\end{cases}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, hb<sub>1</sub>, &lambda;<sub>1</sub>, hb<sub>2</sub>, &lambda;<sub>2</sub></tr><tr><td>dual-VG<td>\(\begin{eqnarray}S_e &=& w_1\bigl[1+(\alpha_1 h)^{n_1}\bigr]^{-m_1} + (1-w_1)\bigl[1+(\alpha_2 h)^{n_2}\bigr]^{-m_2}\\m_i&=&1-1/{n_i}\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, &alpha;<sub>1</sub>, n<sub>1</sub>, &alpha;<sub>2</sub>, n<sub>2</sub></tr><tr><td>dual-KO<td>\(\begin{eqnarray}S_e &=& w_1 Q \biggl[\dfrac{\ln(h/h_{m_1})}{\sigma_1}\biggr] + (1-w_1) Q \biggl[\dfrac{\ln(h/h_{m_2})}{\sigma_2}\biggr]\\Q(x) &=& \mathrm{erfc}(x/\sqrt{2})/2\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, hm<sub>1</sub>, &sigma;<sub>1</sub>, hm<sub>2</sub>, &sigma;<sub>2</sub></tr></table>
 
+<p>特に、日本の土壌では団粒が発達した土壌においてはバイモーダルモデルが有効であり、バイモーダルモデルの回帰には特段の工夫がされている(<a href="https://doi.org/10.34467/jssoilphysics.155.0_35">関ら, 2023</a>)。</p>
+
 <p>サンプルデータ silty loam (UNSODA 2760) のSWRCを示す。上記のバイモーダルモデルと、比較のためにVGモデルを示している。バイモーダルモデルではθ<sub>r</sub> = 0 と固定し、VGモデルではすべてのパラメータを自由変数としている。</p>
 
 <div align="center"><img src="img/bimodal.png" alt="Bimodal models"></div>
@@ -60,7 +62,7 @@ k はサブ関数の数、w<sub>i</sub> は重み係数で 0&lt;w<sub>i</sub>&lt
 \[H = h_{b_i} = \alpha_i^{-1} = h_{m_i} \]
 と定義されている。この中で、次の関数が SWRC Fit に実装されている。</p>
 <table border="1"><tr><td>モデル<td>式<td>パラメータ</tr>
-<tr><td>dual-BC-CH<td>\(S_e = \begin{cases}w_1 \left(h / h_b\right)^{-\lambda_1} + (1-w_1)\left(h / h_b\right)^{-\lambda_2}  & (h>h_b)\\ 1 & (h \le h_b)\end{cases}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, h<sub>b</sub>, &lambda;<sub>1</sub>, &lambda;<sub>2</sub></tr><tr><td>VG<sub>1</sub>BC<sub>2</sub>-CH<td>\(\begin{eqnarray}S_e &=& \begin{cases}w_1 S_1 + (1-w_1)\left(h/H\right)^{-\lambda}  & (h>H)\\ w_1 S_1 + 1-w_1 & (h \le H)\end{cases}\\S_1 &=& \bigl[1+(h/H)^n\bigr]^{-m} ~~ (m=1-1/n)\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, H, n, &lambda;</tr><tr><td>dual-VG-CH<td>\(\begin{eqnarray}S_e &=& w_1\bigl[1+(\alpha h)^{n_1}\bigr]^{-m_1} + (1-w_1)\bigl[1+(\alpha h)^{n_2}\bigr]^{-m_2}\\m_i&=&1-1/{n_i}\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, &alpha;, n<sub>1</sub>, n<sub>2</sub></tr><tr><td>KO<sub>1</sub>BC<sub>2</sub>-CH<td>\(\begin{eqnarray}S_e &=& \begin{cases}w_1 S_1 + (1-w_1)\left(h/H\right)^{-\lambda}  & (h>H)\\ w_1 S_1 + 1-w_1 & (h \le H)\end{cases}\\S_1 &=& Q \biggl[\dfrac{\ln(h/h_m)}{\sigma}\biggr], Q(x) = \mathrm{erfc}(x/\sqrt{2})/2\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, H, &sigma;, &lambda;</tr></table>
+<tr><td>dual-BC-CH<td>\(S_e = \begin{cases}w_1 \left(h / h_b\right)^{-\lambda_1} + (1-w_1)\left(h / h_b\right)^{-\lambda_2}  & (h>h_b)\\ 1 & (h \le h_b)\end{cases}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, h<sub>b</sub>, &lambda;<sub>1</sub>, &lambda;<sub>2</sub></tr><tr><td>VG<sub>1</sub>BC<sub>2</sub>-CH<td>\(\begin{eqnarray}S_e &=& \begin{cases}w_1 S_1 + (1-w_1)\left(h/H\right)^{-\lambda_2}  & (h>H)\\ w_1 S_1 + 1-w_1 & (h \le H)\end{cases}\\S_1 &=& \bigl[1+(h/H)^{n_1}\bigr]^{-{m_1}} ~~ (m_1=1-1/{n_1})\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, H, n<sub>1</sub>, &lambda;<sub>2</sub></tr><tr><td>dual-VG-CH<td>\(\begin{eqnarray}S_e &=& w_1\bigl[1+(\alpha h)^{n_1}\bigr]^{-m_1} + (1-w_1)\bigl[1+(\alpha h)^{n_2}\bigr]^{-m_2}\\m_i&=&1-1/{n_i}\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, &alpha;, n<sub>1</sub>, n<sub>2</sub></tr><tr><td>KO<sub>1</sub>BC<sub>2</sub>-CH<td>\(\begin{eqnarray}S_e &=& \begin{cases}w_1 S_1 + (1-w_1)\left(h/H\right)^{-\lambda_2}  & (h>H)\\ w_1 S_1 + 1-w_1 & (h \le H)\end{cases}\\S_1 &=& Q \biggl[\dfrac{\ln(h/h_m)}{\sigma_1}\biggr], Q(x) = \mathrm{erfc}(x/\sqrt{2})/2\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, H, &sigma;<sub>1</sub>, &lambda;<sub>2</sub></tr></table>
 <p>サンプルデータ sand (UNSODA 4440) のSWRCを示す。上記のCHモデルと、比較のためにVGモデルを示している。CHモデルではθ<sub>r</sub> = 0 と固定し、VGモデルではすべてのパラメータを自由変数としている。VGモデルではθ<sub>r</sub>=0.074と最適化された。</p>
 
 <div align="center"><img src="img/dual-ch.png" alt="dual-CH models"></div>
@@ -69,7 +71,7 @@ k はサブ関数の数、w<sub>i</sub> は重み係数で 0&lt;w<sub>i</sub>&lt
 
 <h2>透水性関数</h2>
 
-<p>FX モデル以外のモデルに対しては、一般化Mualem式による不飽和透水係数の閉形式解が得られている (<a href="https://doi.org/10.1002/vzj2.20168">Seki et al., 2022</a>; <a href="https://researchmap.jp/sekik/presentations/36027912/attachment_file.pdf">関ら, 2021</a>)。それが実用的な式であることは<a href="https://doi.org/10.2478/johh-2022-0039">Seki et al. (2023)</a>が示している。<a href="https://sekika.github.io/unsatfit/">unsatfit</a>によって透水性関数のフィッティングが可能である。</p>
+<p>FX モデル以外のモデルに対しては、一般化Mualem式による不飽和透水係数の閉形式解が得られている (<a href="https://doi.org/10.1002/vzj2.20168">Seki et al., 2022</a>; <a href="https://researchmap.jp/sekik/presentations/36027912/attachment_file.pdf">関ら, 2021</a>; <a href="https://www.jstage.jst.go.jp/article/jssoilphysics/154/0/154_19/_article/-char/ja/">関・取出, 2023</a>)。それが実用的な式であることは<a href="https://doi.org/10.2478/johh-2022-0039">Seki et al. (2023)</a>が示している。<a href="https://sekika.github.io/unsatfit/">unsatfit</a>によって透水性関数のフィッティングが可能である。</p>
 
 <h2>モデルの略記について</h2>
 
@@ -84,10 +86,12 @@ k はサブ関数の数、w<sub>i</sub> は重み係数で 0&lt;w<sub>i</sub>&lt
 <li>Kosugi, K. (1996): Lognormal distribution model for unsaturated soil hydraulic properties. <i>Water Resour. Res.</i> 32: 2697-2703. <a href="http://dx.doi.org/10.1029/96WR01776">doi:10.1029/96WR01776</a></li>
 <li>Seki, K. (2007): SWRC fit - a nonlinear fitting program with a water retention curve for soils having unimodal and bimodal pore structure. <i>Hydrol. Earth Syst. Sci. Discuss.</i>, 4: 407-437. <a href="http://dx.doi.org/10.5194/hessd-4-407-2007">doi:10.5194/hessd-4-407-2007</a></li>
 <li>Seki, K., Toride, N., & Th. van Genuchten, M. (2022). Closed-form hydraulic conductivity equations for multimodal unsaturated soil hydraulic properties. Vadose Zone J. 21, e20168. <a href="https://doi.org/10.1002/vzj2.20168">doi:10.1002/vzj2.20168</a></li>
-<li>Seki, K., Toride, N., & Th. van Genuchten, M. (2023). Evaluation of a general model for multimodal unsaturated soil hydraulic properties. J. Hydrol. Hydromech. 71(1): 22-34. <a href="https://doi.org/10.2478/johh-2022-0039?>doi:10.2478/johh-2022-0039</a></a>
+<li>Seki, K., Toride, N., & Th. van Genuchten, M. (2023). Evaluation of a general model for multimodal unsaturated soil hydraulic properties. J. Hydrol. Hydromech. 71(1): 22-34. <a href="https://doi.org/10.2478/johh-2022-0039">doi:10.2478/johh-2022-0039</a>
 
 <li>関勝寿 (2017): <a href="https://toyo.repo.nii.ac.jp/?action=repository_uri&item_id=8838&file_id=22&file_no=1">水分特性曲線の回帰プログラム SWRC Fit (1)−水分特性モデル−</a>. 東洋大学紀要自然科学篇 61: 41-65.
 <li>関勝寿, 取出伸夫, M.Th. van Genuchten (2021): <a href="https://researchmap.jp/sekik/presentations/36027912/attachment_file.pdf">線形和水分保持関数に対するMualemモデルの不飽和透水係数</a>. 2021年度土壌物理学会大会 講演要旨集 pp.30-31.
+<li>関勝寿, 取出伸夫 (2023): 一般化透水モデルによる不飽和透水係数の閉形式解. 土壌の物理性 154: 19-27. <a href="https://doi.org/10.34467/jssoilphysics.154.0_19">doi:10.34467/jssoilphysics.154.0_19</a>
+<li>関勝寿, 岩田幸良, 柳井洋介, 亀山幸司 (2023): 団粒構造が発達した土壌の水分特性曲線の回帰手法の改良 ーdual-van Genuchtenモデルのパラメータ決定の自動化に向けた取り組みー</a>. 土壌の物理性 155: 35-44. <a href="https://doi.org/10.34467/jssoilphysics.155.0_35">doi:10.34467/jssoilphysics.155.0_35</a>
 
 <li>van Genuchten, M. (1980): A closed-form equation for predicting the hydraulic conductivity of unsaturated soils. <i>Soil Sci. Soc. Am. J.</i> 44:892-898. <a href="https://doi.org/10.2136/sssaj1980.03615995004400050002x">doi:10.2136/sssaj1980.03615995004400050002x</a></li>
 </ul>
