--- a/swrcfit/fig.html
+++ b/swrcfit/fig.html
@@ -30,8 +30,7 @@ This is a list of figures produced by <a href="./">SWRC Fit</a>. Sample data pro
 <p>Persistent URL of this page is <a href="http://purl.org/net/swrc/fig.html">http://purl.org/net/swrc/fig.html</a>.
 </p>
 <p>
-Author: <a href="http://www2.toyo.ac.jp/~seki_k/en/">Katsutoshi Seki</a>
+Author: <a href="https://sekika.github.io/toyo/en/">Katsutoshi Seki</a>
 </p>
-<p style="text-align:right;"><img src="https://seki.webmasters.gr.jp/swrc/npc.cgi?L=http://purl.org/net/swrc/" alt="counter"></p>
 </body>
 </html>
