--- a/swrcfit/model-ja.html
+++ b/swrcfit/model-ja.html
@@ -100,8 +100,7 @@ k はサブ関数の数、w<sub>i</sub> は重み係数で 0&lt;w<sub>i</sub>&lt
 <p>このページの恒久的な URL (PURL) は <a href="http://purl.org/net/swrc/model.html">http://purl.org/net/swrc/model.html</a> です。
 </p>
 <p>
-著者: <a href="http://www2.toyo.ac.jp/~seki_k/">関 勝寿</a>
+著者: <a href="https://sekika.github.io/toyo/">関 勝寿</a>
 </p>
-<p style="text-align:right;"><img src="https://seki.webmasters.gr.jp/swrc/npc.cgi?L=http://purl.org/net/swrc/" alt="counter"></p>
 </body>
 </html>
