--- a/swrcfit/unit.html
+++ b/swrcfit/unit.html
@@ -61,8 +61,7 @@ Units of other parameters used in SWRC Fit are dimensionless; &lambda; in BC mod
 <p>Persistent URL of this page is <a href="http://purl.org/net/swrc/unit.html">http://purl.org/net/swrc/unit.html</a>.
 </p>
 <p>
-Author: <a href="http://www2.toyo.ac.jp/~seki_k/en/">Katsutoshi Seki</a>
+Author: <a href="https://sekika.github.io/toyo/en/">Katsutoshi Seki</a>
 </p>
-<p style="text-align:right;"><img src="https://seki.webmasters.gr.jp/swrc/npc.cgi?L=http://purl.org/net/swrc/" alt="counter"></p>
 </body>
 </html>
