--- a/swrcfit/model.html
+++ b/swrcfit/model.html
@@ -100,8 +100,7 @@ Fixed parameter &theta;<sub>r</sub> = 0 is used for bimodal models, while all va
 <p>Persistent URL of this page is <a href="http://purl.org/net/swrc/model.html">http://purl.org/net/swrc/model.html</a>.
 </p>
 <p>
-Author: <a href="http://www2.toyo.ac.jp/~seki_k/en/">Katsutoshi Seki</a>
+Author: <a href="https://sekika.github.io/toyo/en/">Katsutoshi Seki</a>
 </p>
-<p style="text-align:right;"><img src="https://seki.webmasters.gr.jp/swrc/npc.cgi?L=http://purl.org/net/swrc/" alt="counter"></p>
 </body>
 </html>
