--- a/swrcfit/model.html
+++ b/swrcfit/model.html
@@ -19,9 +19,8 @@ We can obtain &theta;(h) from S<sub>e</sub>(h) by &theta;(h) = (&theta;<sub>s</s
 
 <p><a href="./">SWRC Fit</a> simultaneously fits measured SWRC data to multiple S<sub>e</sub>(h) functions described as follows and determine the parameters of the functions.</p>
 
-<h2>Unimodal models</h2>
-<table border="1"><tr><td>Abbr.<td>Model<td>Equation<td>Parameters</tr>
-<tr><td>BC<td>Brooks and Corey<td>\(S_e = \begin{cases}\left(h / h_b\right)^{-\lambda} & (h>h_b) \\ 1 & (h \le h_b)\end{cases}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, h<sub>b</sub>, &lambda;</tr><tr><td>VG<td>van Genuchten<td>\(S_e = \biggl[\dfrac{1}{1+(\alpha h)^n}\biggr]^m ~~ (m=1-1/n)\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, &alpha;, n</tr><tr><td>KO<td>Kosugi<td>\(\begin{eqnarray}S_e &=& Q \biggl[\dfrac{\ln(h/h_m)}{\sigma}\biggr]\\Q(x) &=& \mathrm{erfc}(x/\sqrt{2})/2\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, h<sub>m</sub>, &sigma;</tr><tr><td>FX<td>Fredlund and Xing<td>\(S_e = \biggl[ \dfrac{1}{\ln \left[e+(h / a)^n \right]} \biggr]^m\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, a, m, n</tr></table>
+<h2 id="unimodal">Unimodal models</h2>
+<table border="1"><tr><td>Abbr.<td>Model<td>Equation<td>Parameters</tr><tr><td>BC<td>Brooks and Corey<td>\(S_e = \begin{cases}\left(h / h_b\right)^{-\lambda} & (h>h_b) \\ 1 & (h \le h_b)\end{cases}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, h<sub>b</sub>, &lambda;</tr><tr><td>VG<td>van Genuchten<td>\(S_e = \biggl[\dfrac{1}{1+(\alpha h)^n}\biggr]^m ~~ (m=1-1/n)\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, &alpha;, n</tr><tr><td>KO<td>Kosugi<td>\(\begin{eqnarray}S_e &=& Q \biggl[\dfrac{\ln(h/h_m)}{\sigma}\biggr]\\Q(x) &=& \mathrm{erfc}(x/\sqrt{2})/2\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, h<sub>m</sub>, &sigma;</tr><tr><td>FX<td>Fredlund and Xing<td>\(S_e = \biggl[ \dfrac{1}{\ln \left[e+(h / a)^n \right]} \biggr]^m\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, a, m, n</tr></table>
 
 <ul>
 <li>In KO model, Q(x) is the complementary cumulative normal distribution function, defined by Q(x)=1-&Phi;(x), in which &Phi;(x) is a normalized form of the <a href="http://mathworld.wolfram.com/NormalDistributionFunction.html">cumulative normal distribution function</a>, and can be computed from complementary error function erfc(x) = 1-erf(x) as shown in the table.</li>
@@ -32,9 +31,9 @@ We can obtain &theta;(h) from S<sub>e</sub>(h) by &theta;(h) = (&theta;<sub>s</s
 <p>Here is SWRC for the sample data, clay loam (UNSODA 3033) with unimodal models, with all variables including &theta;<sub>s</sub> and &theta;<sub>r</sub> are optimized.
 Fitted parameters, coefficient of determination (R<sub>2</sub>) and <a href="https://en.wikipedia.org/wiki/Akaike_information_criterion">AIC</a> can be shown in table by executing calculation with SWRC Fit.</p>
 
-<div align="center"><img src="img/unimodal.png" alt="Unimodal models"></div>
+<div align="center"><img src="img/unimodal.svg" alt="Unimodal models"></div>
 
-<h2>Multimodal models</h2>
+<h2 id="multimodal">Multimodal models</h2>
 
 <p>Multimodal water retention function is defined as a linear superposition of subfunctions S<sub>i</sub>(h) as follows (<a href="https://doi.org/10.1002/vzj2.20168">Seki et al., 2022</a>).
 \[ S(h) = \Sigma_{i=1}^k w_i S_i(h) \]
@@ -47,42 +46,48 @@ Combinations of the same subfunctions (e.g., BC<sub>1</sub>BC<sub>2</sub>BC<sub>
 The multi-VG model is the same as Durner (1994) model, and multi-KO model is the same as Seki (2007) model.
 Multimodels consisting of only two similar subfunctions are referred to as dual-models, such as the dual-BC for BC<sub>1</sub>BC<sub>2</sub>.</p>
 
-<h2>Bimodal models</h2>
+<h2 id="bimodal">Bimodal models</h2>
 <p>As explained in the previous section, there are some possible combinations of bimodal models, where following models are implemented in SWRC Fit.</p>
-<table border="1"><tr><td>Model<td>Equation<td>Parameters</tr>
-<tr><td>dual-BC<td>\(S_e = \begin{cases}w_1 \left(h / h_{b_1}\right)^{-\lambda_1} + (1-w_1)\left(h / h_{b_2}\right)^{-\lambda_2}  & (h>h_{b_2}) \\ w_1 \left(h / h_{b_1}\right)^{-\lambda_1} + 1-w_1  & (h_{b_1} < h \le h_{b_2}) \\1 & (h \le h_{b_1})\end{cases}\)<	d>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, hb<sub>1</sub>, &lambda;<sub>1</sub>, hb<sub>2</sub>, &lambda;<sub>2</sub></tr><tr><td>dual-VG<td>\(\begin{eqnarray}S_e &=& w_1\bigl[1+(\alpha_1 h)^{n_1}\bigr]^{-m_1} + (1-w_1)\bigl[1+(\alpha_2 h)^{n_2}\bigr]^{-m_2}\\m_i&=&1-1/{n_i}\end{eqnarray}\)<	d>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, &alpha;<sub>1</sub>, n<sub>1</sub>, &alpha;<sub>2</sub>, n<sub>2</sub></tr><tr><td>dual-KO<td>\(\begin{eqnarray}S_e &=& w_1 Q \biggl[\dfrac{\ln(h/h_{m_1})}{\sigma_1}\biggr] + (1-w_1) Q \biggl[\dfrac{\ln(h/h_{m_2})}{\sigma_2}\biggr]\\Q(x) &=& \mathrm{erfc}(x/\sqrt{2})/2\end{eqnarray}\)<	d>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, hm<sub>1</sub>, &sigma;<sub>1</sub>, hm<sub>2</sub>, &sigma;<sub>2</sub></tr></table>
+<table border="1"><tr><td>Abbr.<td>Model<td>Equation<td>Parameters</tr><tr><td>DB<td>dual-BC<td>\(S_e = \begin{cases}w_1 \left(h / h_{b_1}\right)^{-\lambda_1} + (1-w_1)\left(h / h_{b_2}\right)^{-\lambda_2}  & (h>h_{b_2}) \\ w_1 \left(h / h_{b_1}\right)^{-\lambda_1} + 1-w_1  & (h_{b_1} < h \le h_{b_2}) \\1 & (h \le h_{b_1})\end{cases}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, hb<sub>1</sub>, &lambda;<sub>1</sub>, hb<sub>2</sub>, &lambda;<sub>2</sub></tr><tr><td>DV<td>dual-VG<td>\(\begin{eqnarray}S_e &=& w_1\bigl[1+(\alpha_1 h)^{n_1}\bigr]^{-m_1} + (1-w_1)\bigl[1+(\alpha_2 h)^{n_2}\bigr]^{-m_2}\\m_i&=&1-1/{n_i}\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, &alpha;<sub>1</sub>, n<sub>1</sub>, &alpha;<sub>2</sub>, n<sub>2</sub></tr><tr><td>DK<td>dual-KO<td>\(\begin{eqnarray}S_e &=& w_1 Q \biggl[\dfrac{\ln(h/h_{m_1})}{\sigma_1}\biggr] + (1-w_1) Q \biggl[\dfrac{\ln(h/h_{m_2})}{\sigma_2}\biggr]\\Q(x) &=& \mathrm{erfc}(x/\sqrt{2})/2\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, hm<sub>1</sub>, &sigma;<sub>1</sub>, hm<sub>2</sub>, &sigma;<sub>2</sub></tr></table>
 
 <p>Here is SWRC for the sample data, silty loam (UNSODA 2760) with bimodal models and VG model for comparison.
 Fixed parameter &theta;<sub>r</sub> = 0 is used for bimodal models, while all variables are optimized for VG model.</p>
 
-<div align="center"><img src="img/bimodal.png" alt="Bimodal models"></div>
+<div align="center"><img src="img/bimodal.svg" alt="Bimodal models"></div>
 
 <p>See also <a href="https://acsess.onlinelibrary.wiley.com/doi/10.1002/vzj2.20168#vzj220168-fig-0001">Figure 1 in Seki et al., 2022</a>.</p>
 
-<h2>CH variation</h2>
+<h2 id="CH">CH variation</h2>
 
 <p>CH (common head) variation for multimodal model of BC, VG, KO subfunctions is defined in <a href="https://doi.org/10.1002/vzj2.20168">Seki et al. (2022)</a> as
 \[H = h_{b_i} = \alpha_i^{-1} = h_{m_i} \]
 where following models are implemented in SWRC Fit.</p>
-<table border="1"><tr><td>Model<td>Equation<td>Parameters</tr>
-<tr><td>dual-BC-CH<td>\(S_e = \begin{cases}w_1 \left(h / h_b\right)^{-\lambda_1} + (1-w_1)\left(h / h_b\right)^{-\lambda_2}  & (h>h_b)\\ 1 & (h \le h_b)\end{cases}\)<	d>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, h<sub>b</sub>, &lambda;<sub>1</sub>, &lambda;<sub>2</sub></tr><tr><td>VG<sub>1</sub>BC<sub>2</sub>-CH<td>\(\begin{eqnarray}S_e &=& \begin{cases}w_1 S_1 + (1-w_1)\left(h/H\right)^{-\lambda_2}  & (h>H)\\ w_1 S_1 + 1-w_1 & (h \le H)\end{cases}\\S_1 &=& \bigl[1+(h/H)^{n_1}\bigr]^{-{m_1}} ~~ (m_1=1-1/{n_1})\end{eqnarray}\)<	d>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, H, n<sub>1</sub>, &lambda;<sub>2</sub></tr><tr><td>dual-VG-CH<td>\(\begin{eqnarray}S_e &=& w_1\bigl[1+(\alpha h)^{n_1}\bigr]^{-m_1} + (1-w_1)\bigl[1+(\alpha h)^{n_2}\bigr]^{-m_2}\\m_i&=&1-1/{n_i}\end{eqnarray}\)<	d>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, &alpha;, n<sub>1</sub>, n<sub>2</sub></tr><tr><td>KO<sub>1</sub>BC<sub>2</sub>-CH<td>\(\begin{eqnarray}S_e &=& \begin{cases}w_1 S_1 + (1-w_1)\left(h/H\right)^{-\lambda_2}  & (h>H)\\ w_1 S_1 + 1-w_1 & (h \le H)\end{cases}\\S_1 &=& Q \biggl[\dfrac{\ln(h/h_m)}{\sigma_1}\biggr], Q(x) = \mathrm{erfc}(x/\sqrt{2})/2\end{eqnarray}\)<	d>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, H, &sigma;<sub>1</sub>, &lambda;<sub>2</sub></tr></table>
+<table border="1"><tr><td>Abbr.<td>Model<td>Equation<td>Parameters</tr><tr><td>DBCH<td>dual-BC-CH<td>\(S_e = \begin{cases}w_1 \left(h / h_b\right)^{-\lambda_1} + (1-w_1)\left(h / h_b\right)^{-\lambda_2}  & (h>h_b)\\ 1 & (h \le h_b)\end{cases}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, h<sub>b</sub>, &lambda;<sub>1</sub>, &lambda;<sub>2</sub></tr><tr><td>VGBCCH<td>VG<sub>1</sub>BC<sub>2</sub>-CH<td>\(\begin{eqnarray}S_e &=& \begin{cases}w_1 S_1 + (1-w_1)\left(h/H\right)^{-\lambda_2}  & (h>H)\\ w_1 S_1 + 1-w_1 & (h \le H)\end{cases}\\S_1 &=& \bigl[1+(h/H)^{n_1}\bigr]^{-{m_1}} ~~ (m_1=1-1/{n_1})\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, H, n<sub>1</sub>, &lambda;<sub>2</sub></tr><tr><td>DVCH<td>dual-VG-CH<td>\(\begin{eqnarray}S_e &=& w_1\bigl[1+(\alpha h)^{n_1}\bigr]^{-m_1} + (1-w_1)\bigl[1+(\alpha h)^{n_2}\bigr]^{-m_2}\\m_i&=&1-1/{n_i}\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, &alpha;, n<sub>1</sub>, n<sub>2</sub></tr><tr><td>KOBCCH<td>KO<sub>1</sub>BC<sub>2</sub>-CH<td>\(\begin{eqnarray}S_e &=& \begin{cases}w_1 S_1 + (1-w_1)\left(h/H\right)^{-\lambda_2}  & (h>H)\\ w_1 S_1 + 1-w_1 & (h \le H)\end{cases}\\S_1 &=& Q \biggl[\dfrac{\ln(h/h_m)}{\sigma_1}\biggr], Q(x) = \mathrm{erfc}(x/\sqrt{2})/2\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, H, &sigma;<sub>1</sub>, &lambda;<sub>2</sub></tr></table>
 <p>Here is SWRC for the sample data, sand (UNSODA 4440) with CH variations of bimodal models and VG model for comparison.
 Fixed parameter &theta;<sub>r</sub> = 0 is used for bimodal models, while all variables are optimized for VG model.
 &theta;<sub>r</sub> is optimized at 0.074 for VG model.</p>
 
-<div align="center"><img src="img/dual-ch.png" alt="dual-CH models"></div>
+<div align="center"><img src="img/dual-ch.svg" alt="dual-CH models"></div>
 
 <p>See also <a href="https://acsess.onlinelibrary.wiley.com/doi/10.1002/vzj2.20168#vzj220168-fig-0002">Figure 2 in Seki et al., 2022</a>.</p>
 
-<h2>Hydraulic conductivity functions</h2>
+<h2 id="trimodal">Trimodal models</h2>
+
+<p>Trimodal models are defined in <a href="https://doi.org/10.1002/vzj2.20168">Seki et al. (2022)</a>, and the application is shown in Seki et al., (2026). As discussed in the paper, while trimodal water-retention functions provide the flexibility needed for media with clear triple porosity, they also introduce additional degrees of freedom and may lead to non-unique parameterizations when data coverage is limited or noisy.</p>
+
+<table border="1"><tr><td>Abbr.<td>Model<td>Equation<td>Parameters</tr><tr><td>tri-VG<td>tri-VG<td>\(\begin{eqnarray}S_e &=& \sum_{i=1}^{3} w_i\bigl[1+(\alpha_i h)^{n_i}\bigr]^{-m_i}\\m_i&=&1-1/{n_i}\\w_3&=&1-w_1-w_2\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, &alpha;<sub>1</sub>, n<sub>1</sub>, w<sub>2</sub>, &alpha;<sub>2</sub>, n<sub>2</sub>, &alpha;<sub>3</sub>, n<sub>3</sub></tr><tr><td>BVV<td>BC<sub>1</sub>VG<sub>2</sub>VG<sub>3</sub><td>\(\begin{eqnarray}S_e &=& w_1 BC_1 + w_2 VG_2 + (1-w_1 - w_2) VG_3\\BC_1 &=& \begin{cases}\left(h / h_{b1}\right)^{-\lambda_1} & (h>h_{b1}) \\ 1 & (h \le h_{b1})\end{cases}\\ VG_i &=& \bigl[1+(\alpha_i h)^{n_i}\bigr]^{-m_i} \\m_i&=&1-1/{n_i}\end{eqnarray}\)<td>&theta;<sub>s</sub> &theta;<sub>r</sub>, w<sub>1</sub>, h<sub>b1</sub>, &lambda;<sub>1</sub>, w<sub>2</sub>, &alpha;<sub>2</sub>, n<sub>2</sub>, &alpha;<sub>3</sub>, n<sub>3</sub></tr></table>
+
+<p>Here is SWRC for the sample data, trimodal rock (Illinois sandstone) with timodal models and dual-VG model for comparison. Fixed parameter &theta;<sub>s</sub> = max(&theta;) and &theta;<sub>r</sub> = 0 is used for trimodal models, while only &theta;<sub>r</sub> = 0 is fixed for dual-VG model.</p>
+
+<div align="center"><img src="img/trimodal.svg" alt="Trimodal models"></div>
+
+<p>See also Figures 1 and 3 in Seki et al., 2026.</p>
+
+<h2 id="conductivity">Hydraulic conductivity functions</h2>
 
 <p>For water retention functions except for FX model, closed-form hydraulic conductivity equations with generalized Mualem's equation are available (<a href="https://doi.org/10.1002/vzj2.20168">Seki et al., 2022</a>). The equations are useful for practical applications as shown in <a href="https://doi.org/10.2478/johh-2022-0039">Seki et al. (2023)</a>. Use <a href="https://sekika.github.io/unsatfit/">unsatfit</a> for fitting with those functions.</p>
 
-<h2>Note for notation</h2>
-
-<p>In the old version of SWRC Fit, KO model was denoted as LN model, dual-VG model was denoted as DB model, and dual-KO was denoted as BL model. The notation was changed to match Seki et al. (2022).</p>
-
-<h2>Reference</h2>
+<h2 id="reference">Reference</h2>
 
 <ul>
 <li>Brooks, R.H., and A.T. Corey (1964): Hydraulic properties of porous media. Hydrol. Paper 3. Colorado State Univ., Fort Collins, CO, USA.</li>
@@ -90,8 +95,9 @@ Fixed parameter &theta;<sub>r</sub> = 0 is used for bimodal models, while all va
 <li>Fredlund, D.G. and Xing, A. (1994): Equations for the soil-water characteristic curve. <i>Can. Geotech. J.</i>, 31: 521-532. <a href="http://dx.doi.org/10.1139/t94-061">doi:10.1139/t94-061</a></li>
 <li>Kosugi, K. (1996): Lognormal distribution model for unsaturated soil hydraulic properties. <i>Water Resour. Res.</i> 32: 2697-2703. <a href="http://dx.doi.org/10.1029/96WR01776">doi:10.1029/96WR01776</a></li>
 <li>Seki, K. (2007): SWRC fit - a nonlinear fitting program with a water retention curve for soils having unimodal and bimodal pore structure. <i>Hydrol. Earth Syst. Sci. Discuss.</i>, 4: 407-437. <a href="http://dx.doi.org/10.5194/hessd-4-407-2007">doi:10.5194/hessd-4-407-2007</a></li>
-<li>Seki, K., Toride, N., & Th. van Genuchten, M. (2022). Closed-form hydraulic conductivity equations for multimodal unsaturated soil hydraulic properties. Vadose Zone J. 21, e20168. <a href="https://doi.org/10.1002/vzj2.20168">doi:10.1002/vzj2.20168</a></li>
-<li>Seki, K., Toride, N., & Th. van Genuchten, M. (2023). Evaluation of a general model for multimodal unsaturated soil hydraulic properties. J. Hydrol. Hydromech. 71(1): 22-34. <a href="https://doi.org/10.2478/johh-2022-0039">doi:10.2478/johh-2022-0039</a>
+<li>Seki, K., Toride, N., & Th. van Genuchten, M. (2022). Closed-form hydraulic conductivity equations for multimodal unsaturated soil hydraulic properties. <i>Vadose Zone J.</i> 21, e20168. <a href="https://doi.org/10.1002/vzj2.20168">doi:10.1002/vzj2.20168</a></li>
+<li>Seki, K., Toride, N., & Th. van Genuchten, M. (2023). Evaluation of a general model for multimodal unsaturated soil hydraulic properties. <i>J. Hydrol. Hydromech.</i> 71(1): 22-34. <a href="https://doi.org/10.2478/johh-2022-0039">doi:10.2478/johh-2022-0039</a>
+<li>Seki, K., van Genuchten, M.T., Durner, W., Zhuang, L., Bermudez, L.B.S. (2026). Trimodal hydraulic models for unsaturated flow: Coupling triple-porosity water retention with general conductivity functions. <i>J. Hydrol. Hydromech.</i> <a href="https://researchmap.jp/sekik/published_papers/51967432/attachment_file.pdf">in press</a>.
 
 <li>van Genuchten, M. (1980): A closed-form equation for predicting the hydraulic conductivity of unsaturated soils. <i>Soil Sci. Soc. Am. J.</i> 44:892-898. <a href="https://doi.org/10.2136/sssaj1980.03615995004400050002x">doi:10.2136/sssaj1980.03615995004400050002x</a></li>
 </ul>
