--- a/swrcfit/fig.html
+++ b/swrcfit/fig.html
@@ -18,14 +18,15 @@ This is a list of figures produced by <a href="./">SWRC Fit</a>. Sample data pro
 <p>One of the figures is shown randomly at the page of SWRC Fit. Note that selected models are different.
 </p>
 <h2>Superior, AZ, USA (UNSODA 1270) : Tuffaceous Rock</h2>
-<p><div align="center"><img src="img/1270.png" alt="Sample output"></div></p><h2>Grenoble, France (UNSODA 4440) : Sand</h2>
-<p><div align="center"><img src="img/4440.png" alt="Sample output"></div></p><h2>Hanford, WA, USA (UNSODA 2243) : Sandy loam</h2>
-<p><div align="center"><img src="img/2243.png" alt="Sample output"></div></p><h2>Union Springs, AL, USA (UNSODA 1015) : Loamy sand</h2>
-<p><div align="center"><img src="img/1015.png" alt="Sample output"></div></p><h2>Lyss, Switzerland (UNSODA 2760) : Silty loam</h2>
-<p><div align="center"><img src="img/2760.png" alt="Sample output"></div></p><h2>Tukabaru, Miyazaki, Japan (UNSODA 4800) : Loam</h2>
-<p><div align="center"><img src="img/4800.png" alt="Sample output"></div></p><h2>Orenburg region, Russia (UNSODA 3033) : Clay loam</h2>
-<p><div align="center"><img src="img/3033.png" alt="Sample output"></div></p><h2>Seelow, Germany (UNSODA 2362) : Clay</h2>
-<p><div align="center"><img src="img/2362.png" alt="Sample output"></div></p>
+<p><div align="center"><img src="img/Superior, AZ, USA (UNSODA 1270).svg" alt="Sample output"></div></p><h2>Grenoble, France (UNSODA 4440) : Sand</h2>
+<p><div align="center"><img src="img/Grenoble, France (UNSODA 4440).svg" alt="Sample output"></div></p><h2>Hanford, WA, USA (UNSODA 2243) : Sandy loam</h2>
+<p><div align="center"><img src="img/Hanford, WA, USA (UNSODA 2243).svg" alt="Sample output"></div></p><h2>Union Springs, AL, USA (UNSODA 1015) : Loamy sand</h2>
+<p><div align="center"><img src="img/Union Springs, AL, USA (UNSODA 1015).svg" alt="Sample output"></div></p><h2>Lyss, Switzerland (UNSODA 2760) : Silty loam</h2>
+<p><div align="center"><img src="img/Lyss, Switzerland (UNSODA 2760).svg" alt="Sample output"></div></p><h2>Tukabaru, Miyazaki, Japan (UNSODA 4800) : Loam</h2>
+<p><div align="center"><img src="img/Tukabaru, Miyazaki, Japan (UNSODA 4800).svg" alt="Sample output"></div></p><h2>Orenburg region, Russia (UNSODA 3033) : Clay loam</h2>
+<p><div align="center"><img src="img/Orenburg region, Russia (UNSODA 3033).svg" alt="Sample output"></div></p><h2>Seelow, Germany (UNSODA 2362) : Clay</h2>
+<p><div align="center"><img src="img/Seelow, Germany (UNSODA 2362).svg" alt="Sample output"></div></p><h2>Illinois sandstone : Trimodal rock</h2>
+<p><div align="center"><img src="img/Illinois sandstone.svg" alt="Sample output"></div></p>
 <hr>
 <p>Persistent URL of this page is <a href="http://purl.org/net/swrc/fig.html">http://purl.org/net/swrc/fig.html</a>.
 </p>
